--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -36,7 +36,7 @@
     .f-content {
         align-items: center;
     }
-    .heading {
+    .heading1 {
         margin-top: 10px;
     }
     .f-content  {
